<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/main_layout_style">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/salmon_red_color"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_log_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="visible">

    <TextView
        android:id="@+id/main_title"
        style="@style/text_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedQuiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_joueur_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_title"
        style="@style/edit_text_style">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtV_jr_1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_joueur_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_joueur_1"
        style="@style/edit_text_style">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtV_jr_2"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_jouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:width="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- OPTIONS  -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/para_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/title_para"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parametre"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_frq_tmp_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/para_questions_ferq"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/title_para" />


        <com.google.android.material.slider.Slider
            android:id="@+id/slider_frq_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            app:layout_constraintTop_toBottomOf="@+id/txt_frq_tmp_rep" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_night_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingTop="20dp"
            android:text="@string/para_night_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_frq_questions" />

        <Button
            android:id="@+id/bt_para_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:width="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
