<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:screenOrientation="landscape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/pt_jr_2"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="20dp"
                android:rotation="180"
                android:text="@string/pt_jr"
                android:textAlignment="center"
                android:textSize="100sp"
                app:flow_verticalAlign="center"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/pseudo_jr_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:text="@string/pseudo_jr_2"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/pt_jr_2"
                app:layout_constraintTop_toTopOf="@+id/pt_jr_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bt_pression_joueur1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Question"
            android:layout_marginBottom="20dp"
            style="@style/text"/>

        <Button
            android:id="@+id/bt_pression_joueur1"
            android:layout_width="400dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bt_pression_joueur2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Question"
            android:layout_marginTop="20dp"
            android:rotation="180"
            style="@style/text"/>

        <Button
            android:id="@+id/bt_pression_joueur2"
            android:layout_width="400dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:rotation="180"/>

        <Button
            android:id="@+id/bt_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/pt_jr_1"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/pt_jr"
                android:textAlignment="center"
                android:textSize="100sp"
                app:flow_verticalAlign="center"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/pseudo_jr_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo_jr_1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/pt_jr_1"
                app:layout_constraintRight_toRightOf="@id/pt_jr_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>